# smarteda

./: .coverage  README.md  pyproject.toml
.github/workflows/: publish.yml
examples/: basic_usage.py
src/smarteda/: __init__.py
src/smarteda.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/smarteda/analysis/: __init__.py  correlations.py  duplicates.py  missing_values.py  outliers.py  quality_score.py
src/smarteda/core/: __init__.py  data_loader.py  data_profiler.py  schema_detector.py
src/smarteda/models/: __init__.py  analysis_result.py
src/smarteda/reports/: __init__.py  html_generator.py
src/smarteda/utils/: __init__.py  helpers.py
tests/: __init__.py  conftest.py  test_correlations.py  test_data_loader.py  test_duplicates.py  test_html_generator.py  test_missing_values.py  test_outliers.py  test_quality_score.py  test_schema_detector.py
